Java 9 support/class loading changed